[gd_scene load_steps=8 format=3 uid="uid://btrg2dmcahmcp"]

[ext_resource type="Texture2D" uid="uid://bo3o2ej5kitfg" path="res://Sprites/tocu0xmhmeca1.png" id="1_sw2pt"]
[ext_resource type="Script" path="res://Menu/menu_scripts/main_menu.gd" id="1_u5hxl"]
[ext_resource type="PackedScene" uid="uid://12k8mi4hc64x" path="res://Menu/control.tscn" id="4_6u2y4"]
[ext_resource type="PackedScene" uid="uid://cyud6p1mv4gad" path="res://Menu/sounds_menu.tscn" id="5_1lquf"]
[ext_resource type="PackedScene" uid="uid://blnqx67f43yx4" path="res://Menu/loading_screen_intermission.tscn" id="6_f6i5x"]
[ext_resource type="PackedScene" uid="uid://beki4dg55i0a3" path="res://UI/Scenes/main_mouse_icon.tscn" id="6_oy7qh"]

[sub_resource type="SystemFont" id="SystemFont_nfh2d"]

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u5hxl")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_sw2pt")
expand_mode = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -315.0
offset_top = -32.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 5
alignment = 1

[node name="Button" type="Button" parent="TextureRect/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 12
text = "Test End Game"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -384.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Seperator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Seperator2" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 42
text = "EVERPATH"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 18
alignment = 1

[node name="Seperator6" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Seperator12" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Seperator11" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Seperator7" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Seperator8" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Seperator9" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Seperator10" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(96, 48)
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_nfh2d")
theme_override_font_sizes/font_size = 24
text = "Start
"

[node name="Seperator3" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="SoundButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Sound"

[node name="Seperator4" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="ControlsButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Controls"

[node name="Seperator5" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="QuitButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Quit"

[node name="Control" parent="." instance=ExtResource("4_6u2y4")]
visible = false
layout_mode = 1

[node name="Sounds_Menu" parent="." instance=ExtResource("5_1lquf")]
visible = false
layout_mode = 1

[node name="main_mouse_icon" parent="." instance=ExtResource("6_oy7qh")]

[node name="loading_screen_intermission" parent="." instance=ExtResource("6_f6i5x")]
visible = false
layout_mode = 1

[connection signal="pressed" from="TextureRect/HBoxContainer2/Button" to="." method="_on_button_pressed"]
